--- a/templates/inicio/menu_aplicaciones_medicos.html
+++ b/templates/inicio/menu_aplicaciones_medicos.html
@@ -2,14 +2,14 @@
 
           <div class="box-header">
               <i class="icon-bookmark"></i>
-              <h5>Tus Aplicaciones</h5>
+              <h5>Mis Aplicaciones</h5>
           </div>
           <div class="box-content">
               <div class="btn-group-box">                
 
-                      <a href="/home/pr/creacion"><button class="btn"><i class="icon-question-sign icon-large"></i><br>Preguntas de tus pacientes</button></a>
-                    <a href="/home/servicios/creacion"><button class="btn"><i class="icon-share icon-large"></i><br>Tus servicios</button></a>
-                    <a href={% url 'ingresar_entrada_blog' %}><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
+                      <a href="/home/pr/creacion"><button class="btn"><i class="icon-question-sign icon-large"></i><br>Respuestas a pacientes</button></a>
+                    <a href="/home/servicios/creacion"><button class="btn"><i class="icon-share icon-large"></i><br>Servicios</button></a>
+                    <a href={% url 'ingresar_entrada_blog' %}><button class="btn"><i class="icon-tags icon-large"></i><br>Artículos</button></a>
                                       
               </div>
           </div>
