--- a/templates/medicos/clubes/clubes_listar_form.html
+++ b/templates/medicos/clubes/clubes_listar_form.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Aplicaciones - Listar Experiencia Académica
+Clubes - Listar
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@ Aplicaciones - Listar Experiencia Académica
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Mi Información Académica
+                        Mis Clubes
                     </legend>
                 </h4>
               </div>
@@ -38,24 +38,25 @@ Aplicaciones - Listar Experiencia Académica
                             <div class="box-header">
                                 <i class="icon-table"></i>
                                 <h5>
-                                     <a href="{% url 'crear_info_academica' %}">Adicionar información académica</a>
+                                     <a href="{% url 'ingresar_club_medico' %}">Subscribirse a un club</a>
                                 </h5>
                             </div>
                             <div class="box-content box-table">
                                 <table id="sample-table" class="table table-hover table-bordered tablesorter">
                                     <thead>
                                         <tr>
-                                            <th class="header">Institución</th>
-                                           
+                                            <th class="header">Club</th>
+                                            <th class="header">Rol</th>
                                         </tr>
                                     </thead>
-                                    {% for perfilacademico in object_list %}
+                                    {% for subscripcionclub in object_list %}
                                     <tbody>
                                         <tr>
-                                            <td><a href="{% url 'actualizar_info_academica' perfilacademico.id %}">{{perfilacademico.institucion}}</a></td>
+                                            <td><a href={% url 'mostrar_club_medico_home' subscripcionclub.club_id %}>{{subscripcionclub.club}}</a></td>
+                                            <td>{{subscripcionclub.rol}}</td>
                                             <td class="td-actions">
-                                                 <a href="{% url 'actualizar_info_academica' perfilacademico.id %}">Actualizar</a>
-                                                 <a href="{% url 'eliminar_info_academica' perfilacademico.id %}">Eliminar</a>
+                                                 <a href="{% url 'actualizar_club_medico' subscripcionclub.id %}">Actualizar</a>
+                                                 <a href="{% url 'eliminar_club_medico' subscripcionclub.id %}">Eliminar</a>
                                             </td>
                                         </tr>
                                     </tbody>
