--- a/estaticos/css/customize-template.css
+++ b/estaticos/css/customize-template.css
@@ -8079,7 +8079,7 @@ body > #body-container {
   box-shadow: 4px 4px 8px #d5d5d5;
 }
 .container-signin {
-  padding: 19px 29px 0 29px;
+  padding: 10px 1px 1px 5px;
   margin: 60px 0 0 0;
   background-color: rgba(123, 156, 157, 0.1);
   border: 1px solid rgba(108, 145, 146, 0.1);
