--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -1,146 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}
-
-    {% endblock title %}</title>
+    <title>{% block title %} {% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="layout" content="main"/>
+    <meta name="layout" content="main" />
 
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <!-- Jquery Charts CSS -->
+    <link href="{{STATIC_URL}}pacientes2/jquery/jquery-ui.css" rel="stylesheet">
 
-    <script src="{{STATIC_URL}}js/jquery/jquery-1.8.2.min.js" type="text/javascript" ></script>
+    <script src="{{STATIC_URL}}js/jquery/jquery-1.8.2.min.js" type="text/javascript"></script>
     <link href="{{STATIC_URL}}css/customize-template.css" type="text/css" media="screen, projection" rel="stylesheet" />
-<link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
+    <link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
     <style>
     </style>
 </head>
-    <body>
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <button class="btn btn-navbar" data-toggle="collapse" data-target="#app-nav-top-bar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="/home/board/" class="brand"><i class="icon-leaf">Hub Salud</i></a>
-                    <div id="app-nav-top-bar" class="nav-collapse">
-                        <ul class="nav">
 
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">  {% if user.is_authenticated %}
+<body>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <button class="btn btn-navbar" data-toggle="collapse" data-target="#app-nav-top-bar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="/home/board/" class="brand"><i class="icon-leaf">Hub Salud</i></a>
+                <div id="app-nav-top-bar" class="nav-collapse">
+                    <ul class="nav">
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">  {% if user.is_authenticated %}
                       Bienvenido apreciado médico
                       {% else %}
                       {% endif %}
                                         <b class="caret hidden-phone"></b>
                                     </a>
-                                 <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="dashboard.html">Editar Cuenta</a>
-                                        </li>
-
-                                    </ul>
-                                </li>
-                        </ul>
-                        <ul class="nav pull-right">
-                            <li>
-                                <a href="/logout/">Salir</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="body-container">
-            <div id="body-content">
-
-                    <div class="body-nav body-nav-horizontal body-nav-fixed">
-                        <div class="container">
-                            <ul>
+                            <ul class="dropdown-menu">
                                 <li>
-                                    <a href="/home/">
-                                        <i class="icon-user-md icon-large"></i> Perfil
-                                    </a>
+                                    <a href="dashboard.html">Editar Cuenta</a>
                                 </li>
-                                <li>
-                                    <a href="/home/pacientes/">
-                                        <i class="icon-book icon-large"></i> Pacientes
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="icon-envelope-alt icon-large"></i> Mensajes
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="icon-users icon-large"></i> Contactos
-                                    </a>
-                                </li>
-                                 <li>
-                                    <a href="#">
-                                        <i class="icon-list icon-large"></i> Actividad
-                                    </a>
-                                </li>
+
                             </ul>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
+                    <ul class="nav pull-right">
+                        <li>
+                            <a href="/logout/">Salir</a>
+                        </li>
 
-    <section class="page container">
-  {% block content %}
-
-  {% endblock content %}
-    </section>
-
-
-
-            </div>
-        </div>
-
-        <div id="spinner" class="spinner" style="display:none;">
-            Loading&hellip;
-        </div>
-
-        <footer class="application-footer">
-            <div class="container">
-                <p> Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014</p>
-                <div class="disclaimer">
-                    <p>Términos de uso</p>
-                    <p>Políticas de privacidad</p>
-                    <p>Condiciones de servicio</p>
+                    </ul>
                 </div>
             </div>
-        </footer>
+        </div>
+    </div>
 
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-transition.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-alert.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-modal.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-dropdown.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-scrollspy.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-tab.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-tooltip.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-popover.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-button.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-collapse.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-carousel.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-typeahead.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-affix.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-datepicker.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/jquery/jquery-tablesorter.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/jquery/jquery-chosen.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/jquery/virtual-tour.js" type="text/javascript" ></script>
-        <script type="text/javascript">
-        $(function() {
+    <div id="body-container">
+        <div id="body-content">
+
+            <div class="body-nav body-nav-horizontal body-nav-fixed">
+                <div class="container">
+                    <ul>
+                        <li>
+                            <a href="/home/">
+                                <i class="icon-user-md icon-large"></i>Mi Perfil
+                            </a>
+                        </li>
+                        <li>
+                            <a href={% url 'listar_club_medico' %}>
+                                <i class="icon-book icon-large"></i>Mis Clubes
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="icon-envelope-alt icon-large"></i>Mis Mensajes
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="icon-users icon-large"></i>Mis Contactos
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="icon-list icon-large"></i>Mi Actividad
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <section class="page container">
+                {% block content %} {% endblock content %}
+            </section>
+
+
+
+        </div>
+    </div>
+
+    <div id="spinner" class="spinner" style="display:none;">
+        Loading&hellip;
+    </div>
+
+    <footer class="application-footer">
+        <div class="container">
+            <p>Powered by Digitalsmark Latinoamérica | Copyright © 2002 - 2014</p>
+            <div class="disclaimer">
+                <p>Términos de uso</p>
+                <p>Políticas de privacidad</p>
+                <p>Condiciones de servicio</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-transition.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-alert.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-modal.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-dropdown.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-scrollspy.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-tab.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-tooltip.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-popover.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-button.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-collapse.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-carousel.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-typeahead.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-affix.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/bootstrap/bootstrap-datepicker.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery/jquery-tablesorter.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery/jquery-chosen.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery/virtual-tour.js" type="text/javascript"></script>
+    
+      <!-- jQuery UI Version 1.11.2 -->
+    <script src="{{STATIC_URL}}pacientes2/jquery/jquery-ui.js"></script>
+    
+    <script type="text/javascript">
+        $(function () {
             $('#sample-table').tablesorter();
-            $('#datepicker').datepicker();
+            $( "#datePicker" ).datepicker({ dateFormat: 'dd/mm/yy',  changeMonth: true, changeYear: true });
+        $( "#datePicker2" ).datepicker({ dateFormat: 'dd/mm/yy',  changeMonth: true,changeYear: true });
             $(".chosen").chosen();
         });
     </script>
-	</body>
+</body>
+
 </html>
