--- a/templates/inicio/categoria_pyr_form.html
+++ b/templates/inicio/categoria_pyr_form.html
@@ -22,7 +22,7 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                   <legend class="lead">
-                        Redactar
+                       Mis Categorías
                     </legend>
                 </h4>
                 </div>
@@ -39,15 +39,10 @@
                         <a href="{% url 'listar_preguntas' %}">
                             <button type="submit" class="btn btn-primary">
                                 <i class="icon-ok"></i>
-                                Ver listado
+                                Ver mi listado de preguntas
                             </button>
                         </a>
-                        <a href="{% url 'ingresar_categoria' %}">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="icon-ok"></i>
-                                Añadir una nueva categoría
-                            </button>
-                        </a>
+                 
                         <p></p>
 
                     </div>
