--- a/templates/inicio/perfil.html
+++ b/templates/inicio/perfil.html
@@ -10,48 +10,16 @@ Perfil - Personal
         <div class="box">
             <div class="box-content">
               <a href=/home/perfilpublico/{{user.id}} target="blank"/>
-                <h4>Ir a tu perfil público</h4></a>
+                <h4>Ir a mi perfil público</h4></a>
             </div>
             <div class="box-header">
                 <i class="icon-bookmark"></i>
-                <h5>Tu Perfil</h5>
+                <h5>Mi Perfil</h5>
             </div>
-            <div class="box-content">
-                <div class="btn-group-box">
-                    <a href="/home/"><button class="btn"><i class="icon-user icon-large"></i><br>Personales</button></a>
-                    <a href=/home/contacto><button class="btn"><i class="icon-users icon-large"></i><br>Contacto</button></a>
-                    <a href="/home/academico"><button class="btn"><i class="icon-book icon-large"></i><br>Académico</button></a>
-                    <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Profesional</button></a>
-                    <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Social</button></a>
-
-                </div>
-            </div>
+       {% include 'inicio/menu_perfil_medicos.html' %}
         </div>
 {% include 'inicio/menu_aplicaciones_medicos.html' %}
-        <div class="box">
-          <div class="box pattern pattern-sandstone">
-                    <div class="box-header">
-                        <i class="icon-list"></i>
-                        <h5>Tus Clubes</h5>
-                        <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
-                            <i class="icon-reorder"></i>
-                        </button>
-                    </div>
-                    <div class="box-content box-list in collapse" style="height: auto;">
-                        <ul>
-                          <li><a href="#">Diabetes</a></li>
-                          <li><a href="#">Hipertensión</a></li>
-                          <li><a href="#">Riesgo Cardiovascular</a></li>
-                          <li><a href="#">Insuficiencia Renal</a></li>
-                          <li><a href="#">Cancer</a></li>
-                          <li><a href="#">Artritis</a></li>
-                          <li><a href="#">Climaterio & Menopausia</a></li>
-                          <li><a href="#">Pediatría</a></li>
-                        </ul>
-                      </div>
 
-                </div>
-      </div>
     </div>
         <div class="span7">
           <div class="panel-group" id="accordion">
@@ -59,7 +27,7 @@ Perfil - Personal
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tus Datos Personales
+                        Mis Datos Personales
                     </legend>
                 </h4>
               </div>
