--- a/templates/pacientes/clubes/clubes_confirmar_delete_form.html
+++ b/templates/pacientes/clubes/clubes_confirmar_delete_form.html
@@ -1,7 +1,7 @@
-{% extends "inicio/board.html" %}
+{% extends "pacientes/index.html" %}
 
 {% block title %}
-Perfil - Profesional
+Clubes - Eliminar
 {% endblock %}
 
 {% block content %}
@@ -16,9 +16,9 @@ Perfil - Profesional
                 <i class="icon-bookmark"></i>
                 <h5>Mi Perfil</h5>
             </div>
-         {% include 'inicio/menu_perfil_medicos.html' %}
+       {% include 'inicio/menu_perfil_medicos.html' %}
         </div>
-   {% include 'inicio/menu_aplicaciones_medicos.html' %}
+   {% include 'paciente/menu_hub_salud_paciente.html' %}
 
     </div>
         <div class="span7">
@@ -27,25 +27,27 @@ Perfil - Profesional
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Mi Experiencia Profesional
+                        Mis Clubes
                     </legend>
                 </h4>
               </div>
               <!-- Desplegable 1 -->
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-             <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
-              {{ form }}
-              <p></p>
-              <div> <input type="submit" value="Ingresar" class="btn btn-primary"></div>
-              <p></p>
+  
+                    <p>¿Está seguro de que quiere eliminar este club?</p>
+                    <p></p>
+ <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+              
+                 <input type="submit" value="Eliminar" class="btn btn-primary">
+                    
               </form>
-              </div>
-                <a href="{% url 'listar_info_profesional' %}"><button type="submit" class="btn btn-primary">
+ <p></p>
+   <a href="{% url 'listar_club_paciente' %}"><button type="submit" class="btn btn-primary">
                             <i class="icon-ok"></i>
-                            Ver mi experiencia profesional
+                            Cancelar
                         </button></a>
-                <p></p>
+              </div>
             </div>
             </div>
         </div>
