--- a/templates/pacientes/clubes/clubes_form.html
+++ b/templates/pacientes/clubes/clubes_form.html
@@ -1,51 +1,42 @@
-{% extends "inicio/board.html" %}
+{% extends "pacientes/index.html" %}
 
 {% block title %}
-Perfil - Profesional
+Clubes - Configuración
 {% endblock %}
 
 {% block content %}
 <div class="row">
-    <div class="span9">
-        <div class="box">
-            <div class="box-content">
-              <a href=/home/perfilpublico/{{user.id}} target="blank"/>
-                <h4>Ir a mi perfil público</h4></a>
-            </div>
-            <div class="box-header">
-                <i class="icon-bookmark"></i>
-                <h5>Mi Perfil</h5>
-            </div>
-         {% include 'inicio/menu_perfil_medicos.html' %}
-        </div>
-   {% include 'inicio/menu_aplicaciones_medicos.html' %}
+    <div class="span5">
+ 
+{% include 'pacientes/menu_hub_salud_paciente.html' %}
 
     </div>
+       </div>
         <div class="span7">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Mi Experiencia Profesional
+                        Clubes
                     </legend>
                 </h4>
               </div>
               <!-- Desplegable 1 -->
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-             <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+
+              <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               {{ form }}
               <p></p>
               <div> <input type="submit" value="Ingresar" class="btn btn-primary"></div>
               <p></p>
               </form>
               </div>
-                <a href="{% url 'listar_info_profesional' %}"><button type="submit" class="btn btn-primary">
+                 <a href="{% url 'listar_club_medico' %}"><button type="submit" class="btn btn-primary">
                             <i class="icon-ok"></i>
-                            Ver mi experiencia profesional
-                        </button></a>
-                <p></p>
+                            Ver mis clubes
+                        </button></a><p></p>
             </div>
             </div>
         </div>
