--- a/templates/pacientes/clubes/clubes_listar_form.html
+++ b/templates/pacientes/clubes/clubes_listar_form.html
@@ -1,33 +1,24 @@
-{% extends "inicio/board.html" %}
+{% extends "pacientes/index.html" %}
 
 {% block title %}
-Aplicaciones - Listar Experiencia Académica
+Clubes - Listar
 {% endblock %}
 
 {% block content %}
 <div class="row">
-    <div class="span9">
-        <div class="box">
-            <div class="box-content">
-              <a href=/home/perfilpublico/{{user.id}} target="blank"/>
-                <h4>Ir a mi perfil público</h4></a>
-            </div>
-            <div class="box-header">
-                <i class="icon-bookmark"></i>
-                <h5>Mi Perfil</h5>
-            </div>
-         {% include 'inicio/menu_perfil_medicos.html' %}
-        </div>
-   {% include 'inicio/menu_aplicaciones_medicos.html' %}
+    <div class="span5">
+ 
+{% include 'pacientes/menu_hub_salud_paciente.html' %}
 
     </div>
+       </div>
         <div class="span7">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Mi Información Académica
+                        Mis Clubes
                     </legend>
                 </h4>
               </div>
@@ -38,24 +29,24 @@ Aplicaciones - Listar Experiencia Académica
                             <div class="box-header">
                                 <i class="icon-table"></i>
                                 <h5>
-                                     <a href="{% url 'crear_info_academica' %}">Adicionar información académica</a>
+                                     <a href="{% url 'ingresar_club_paciente' %}">Subscribirse a un club</a>
                                 </h5>
                             </div>
                             <div class="box-content box-table">
                                 <table id="sample-table" class="table table-hover table-bordered tablesorter">
                                     <thead>
                                         <tr>
-                                            <th class="header">Institución</th>
-                                           
+                                            <th class="header">Club</th>
+                                 
                                         </tr>
                                     </thead>
-                                    {% for perfilacademico in object_list %}
+                                    {% for subscripcionclub in object_list %}
                                     <tbody>
                                         <tr>
-                                            <td><a href="{% url 'actualizar_info_academica' perfilacademico.id %}">{{perfilacademico.institucion}}</a></td>
-                                            <td class="td-actions">
-                                                 <a href="{% url 'actualizar_info_academica' perfilacademico.id %}">Actualizar</a>
-                                                 <a href="{% url 'eliminar_info_academica' perfilacademico.id %}">Eliminar</a>
+                                            <td><a href={% url 'mostrar_club_medico_home' subscripcionclub.club_id %}>{{subscripcionclub.club}}</a></td>
+                                             <td class="td-actions">
+                                                 <a href="{% url 'actualizar_club_medico' subscripcionclub.id %}">Actualizar</a>
+                                                 <a href="{% url 'eliminar_club_medico' subscripcionclub.id %}">Eliminar</a>
                                             </td>
                                         </tr>
                                     </tbody>
