--- a/templates/pacientes/menu_perfil_datos.html
+++ b/templates/pacientes/menu_perfil_datos.html
@@ -3,7 +3,7 @@
       <div class="box">
        <div class="box-content">
             <a href={% url 'perfil_principal_paciente' %} />
-              <h4>Ir a tu perfil público</h4></a>
+              <h4>Ver mi perfil público</h4></a>
           </div>
           <div class="box-header">
               <i class="icon-bookmark"></i>
