--- a/templates/perfil/listarexperienciaprofesional_form.html
+++ b/templates/perfil/listarexperienciaprofesional_form.html
@@ -6,75 +6,28 @@ Aplicaciones - Listar Experiencia Profesional
 
 {% block content %}
 <div class="row">
-    <div class="span8">
+    <div class="span9">
         <div class="box">
             <div class="box-content">
               <a href=/home/perfilpublico/{{user.id}} target="blank"/>
-                <h4>Ir a tu perfil público</h4></a>
+                <h4>Ir a mi perfil público</h4></a>
             </div>
             <div class="box-header">
                 <i class="icon-bookmark"></i>
-                <h5>Tu Perfil</h5>
+                <h5>Mi Perfil</h5>
             </div>
-            <div class="box-content">
-                <div class="btn-group-box">
-                    <a href="/home/"><button class="btn"><i class="icon-user icon-large"></i><br>Personales</button></a>
-                    <a href="/home/contacto"><button class="btn"><i class="icon-users icon-large"></i><br>Contacto</button></a>
-                    <a href="/home/academico"><button class="btn"><i class="icon-book icon-large"></i><br>Académico</button></a>
-                    <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Profesional</button></a>
-                    <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Social</button></a>
-
-                </div>
-            </div>
+         {% include 'inicio/menu_perfil_medicos.html' %}
         </div>
-          <div class="box">
+        {% include 'inicio/menu_aplicaciones_medicos.html' %}
 
-          <div class="box-header">
-              <i class="icon-bookmark"></i>
-              <h5>Tus Aplicaciones</h5>
-          </div>
-          <div class="box-content">
-              <div class="btn-group-box">
-                  <ul class="nav nav-pills nav-stacked">
-                      <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
-                      <li><a href=/home/servicios/creacion>Tus servicios</a></li>
-                      <li><a href={% url 'ingresar_entrada_blog' %}>Blog</a></li>
-                   
-              </div>
-          </div>
-      </div>
-        <div class="box">
-          <div class="box pattern pattern-sandstone">
-                    <div class="box-header">
-                        <i class="icon-list"></i>
-                        <h5>Tus Clubes</h5>
-                        <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
-                            <i class="icon-reorder"></i>
-                        </button>
-                    </div>
-                    <div class="box-content box-list in collapse" style="height: auto;">
-                        <ul>
-                          <li><a href="#">Diabetes</a></li>
-                          <li><a href="#">Hipertensión</a></li>
-                          <li><a href="#">Riesgo Cardiovascular</a></li>
-                          <li><a href="#">Insuficiencia Renal</a></li>
-                          <li><a href="#">Cancer</a></li>
-                          <li><a href="#">Artritis</a></li>
-                          <li><a href="#">Climaterio & Menopausia</a></li>
-                          <li><a href="#">Pediatría</a></li>
-                        </ul>
-                      </div>
-
-                </div>
-      </div>
     </div>
-        <div class="span8">
+        <div class="span7">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tu experiencia Profesional
+                        Mi experiencia Profesional
                     </legend>
                 </h4>
               </div>
