--- a/templates/servicios/listarinfoservicios_form.html
+++ b/templates/servicios/listarinfoservicios_form.html
@@ -10,11 +10,11 @@ Aplicaciones - Listar Servicios
         <div class="box">
             <div class="box-content">
               <a href=/home/perfilpublico/{{user.id}} target="blank"/>
-                <h4>Ir a tu perfil público</h4></a>
+                <h4>Ir a mi perfil público</h4></a>
             </div>
             <div class="box-header">
                 <i class="icon-bookmark"></i>
-                <h5>Tu Perfil</h5>
+                <h5>Mi Perfil</h5>
             </div>
             <div class="box-content">
                 <div class="btn-group-box">
@@ -28,30 +28,7 @@ Aplicaciones - Listar Servicios
             </div>
         </div>
    {% include 'inicio/menu_aplicaciones_medicos.html' %}
-        <div class="box">
-          <div class="box pattern pattern-sandstone">
-                    <div class="box-header">
-                        <i class="icon-list"></i>
-                        <h5>Tus Clubes</h5>
-                        <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
-                            <i class="icon-reorder"></i>
-                        </button>
-                    </div>
-                    <div class="box-content box-list in collapse" style="height: auto;">
-                        <ul>
-                          <li><a href="#">Diabetes</a></li>
-                          <li><a href="#">Hipertensión</a></li>
-                          <li><a href="#">Riesgo Cardiovascular</a></li>
-                          <li><a href="#">Insuficiencia Renal</a></li>
-                          <li><a href="#">Cancer</a></li>
-                          <li><a href="#">Artritis</a></li>
-                          <li><a href="#">Climaterio & Menopausia</a></li>
-                          <li><a href="#">Pediatría</a></li>
-                        </ul>
-                      </div>
 
-                </div>
-      </div>
     </div>
         <div class="span7">
           <div class="panel-group" id="accordion">
@@ -59,7 +36,7 @@ Aplicaciones - Listar Servicios
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tus Servicios
+                        Mis Servicios
                     </legend>
                 </h4>
               </div>
